Updated the sidebar

--- a/index.html
+++ b/index.html
@@ -44,25 +44,39 @@
 
         <ul class="sidebar-list">
           <li class="sidebar-list-item">
-            <span class="material-icons-outlined">dashboard</span> Dashboard
+            <a href="#" target="_blank">
+              <span class="material-icons-outlined">dashboard</span> Dashboard
+            </a>
           </li>
           <li class="sidebar-list-item">
-            <span class="material-icons-outlined">inventory_2</span> Products
+            <a href="#" target="_blank">
+              <span class="material-icons-outlined">inventory_2</span> Products
+            </a>
           </li>
           <li class="sidebar-list-item">
-            <span class="material-icons-outlined">fact_check</span> Inventory
-          </li>
-          <li class="sidebar-list-item"> 
-            <span class="material-icons-outlined">add_shopping_cart</span> Purchase Orders
-          </li>
-          <li class="sidebar-list-item">
-            <span class="material-icons-outlined">shopping_cart</span> Sales Orders
+            <a href="#" target="_blank">
+              <span class="material-icons-outlined">fact_check</span> Inventory
+            </a>
           </li>
           <li class="sidebar-list-item">
-            <span class="material-icons-outlined">poll</span> Reports
+            <a href="#" target="_blank">
+              <span class="material-icons-outlined">add_shopping_cart</span> Purchase Orders
+            </a>
           </li>
           <li class="sidebar-list-item">
-            <span class="material-icons-outlined">settings</span> Settings
+            <a href="#" target="_blank">
+              <span class="material-icons-outlined">shopping_cart</span> Sales Orders
+            </a>
+          </li>
+          <li class="sidebar-list-item">
+            <a href="#" target="_blank">
+              <span class="material-icons-outlined">poll</span> Reports
+            </a>
+          </li>
+          <li class="sidebar-list-item">
+            <a href="#" target="_blank">
+              <span class="material-icons-outlined">settings</span> Settings
+            </a>
           </li>
         </ul>
       </aside>
